// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadReportButton should render DownloadReportButton correctly when disabled is false 1`] = `
<div
  class="MuiBox-root css-0"
  data-testid="download-report-button-container-f5553dac-adb7-440f-9549-c3567b22dc76"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-aysw4f-MuiButtonBase-root-MuiIconButton-root"
    data-testid="download-report-button-f5553dac-adb7-440f-9549-c3567b22dc76"
    tabindex="0"
    title="Download CV"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dy5dri-MuiSvgIcon-root"
      data-testid="download-report-icon-f5553dac-adb7-440f-9549-c3567b22dc76"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 9h-4V3H9v6H5l7 7zM5 18v2h14v-2z"
      />
    </svg>
    <span
      class="MuiTypography-root MuiTypography-caption css-ijdyd0-MuiTypography-root"
    >
      Download CV
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`DownloadReportButton should render DownloadReportButton correctly when disabled is true 1`] = `
<div
  class="MuiBox-root css-0"
  data-testid="download-report-button-container-f5553dac-adb7-440f-9549-c3567b22dc76"
>
  <button
    class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-aysw4f-MuiButtonBase-root-MuiIconButton-root"
    data-testid="download-report-button-f5553dac-adb7-440f-9549-c3567b22dc76"
    disabled=""
    tabindex="-1"
    title="Download CV"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dy5dri-MuiSvgIcon-root"
      data-testid="download-report-icon-f5553dac-adb7-440f-9549-c3567b22dc76"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 9h-4V3H9v6H5l7 7zM5 18v2h14v-2z"
      />
    </svg>
    <span
      class="MuiTypography-root MuiTypography-caption css-1jmum30-MuiTypography-root"
    >
      Download CV
    </span>
  </button>
  <div
    data-testid="download-report-help-tip-f5553dac-adb7-440f-9549-c3567b22dc76"
  />
</div>
`;

exports[`DownloadReportButton should render DownloadReportButton correctly when isLoading is true 1`] = `
<div
  class="MuiBox-root css-0"
  data-testid="download-report-button-container-f5553dac-adb7-440f-9549-c3567b22dc76"
>
  <button
    class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-aysw4f-MuiButtonBase-root-MuiIconButton-root"
    data-testid="download-report-button-f5553dac-adb7-440f-9549-c3567b22dc76"
    disabled=""
    tabindex="-1"
    title="Download CV"
    type="button"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1qiplev-MuiCircularProgress-root"
      data-testid="download-report-progress-icon-f5553dac-adb7-440f-9549-c3567b22dc76"
      role="progressbar"
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-caption css-ijdyd0-MuiTypography-root"
    >
      Downloading
    </span>
  </button>
</div>
`;
